force-app/main/default/objects/Objective__c/fields/Clients__c.field-meta.xml
<CustomField>
    <fullName>Clients__c</fullName>
    <label>Sessions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>