force-app/main/default/objects/Objective__c/fields/Correct__c.field-meta.xml
<CustomField>
    <fullName>Correct__c</fullName>
    <label>Correct</label>
    <inlineHelpText>The total number of Correct responses. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>