force-app/main/default/objects/Objective__c/fields/Incorrect__c.field-meta.xml
<CustomField>
    <fullName>Incorrect__c</fullName>
    <label>Incorrect</label>
    <inlineHelpText>The total number of Incorrect responses. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>