force-app/main/default/objects/Objective__c/fields/Latest_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Session_Date__c</fullName>
    <inlineHelpText>The latest  date of a Session that tested this objective. Calculated by Stats Gatherer.</inlineHelpText>
    <label>Latest Session Date</label>
    <type>Date</type>
</CustomField>