force-app/main/default/objects/Objective__c/fields/OID__c.field-meta.xml
<CustomField>
    <fullName>OID__c</fullName>
    <externalId>true</externalId>
    <label>OID</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>