force-app/main/default/objects/Objective__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <formula>SD__r.Program__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Program</label>
    <type>Text</type>
</CustomField>