force-app/main/default/objects/Objective__c/fields/SD__c.field-meta.xml
<CustomField>
    <fullName>SD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SD</label>
    <referenceTo>SD__c</referenceTo>
    <relationshipLabel>Objectives</relationshipLabel>
    <relationshipName>Objectives</relationshipName>
    <type>Lookup</type>
</CustomField>