force-app/main/default/objects/Objective__c/fields/SD_Name__c.field-meta.xml
<CustomField>
    <fullName>SD_Name__c</fullName>
    <formula>SD__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SD Name</label>
    <type>Text</type>
</CustomField>