force-app/main/default/objects/Objective__c/fields/SDID__c.field-meta.xml
<CustomField>
    <fullName>SDID__c</fullName>
    <formula>SD__r.SDID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SDID</label>
    <type>Text</type>
</CustomField>