force-app/main/default/objects/Objective__c/fields/stats_timestamp__c.field-meta.xml
<CustomField>
    <fullName>stats_timestamp__c</fullName>
    <label>Statistics Run Timestamp</label>
    <type>DateTime</type>
</CustomField>