force-app/main/default/objects/Objective__c/fields/Total_Responses__c.field-meta.xml
<CustomField>
    <fullName>Total_Responses__c</fullName>
    <label>Total Responses</label>
    <inlineHelpText>The total number of responses across all Clients for this Objective. Calculated by Stats Gatherer.</inlineHelpText>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>