force-app/main/default/objects/Objective__c/validationRules/CheckActiveParent.validationRule-meta.xml
<ValidationRule>
    <fullName>CheckActiveParent</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c,&apos;Active&apos;),OR(ISPICKVAL(SD__r.Status__c,&apos;Inactive&apos;), ISPICKVAL(SD__r.Status__c,&apos;Draft&apos;)))</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>Sorry. you cant activate an Objective unless it&apos;s SD Status is also Active</errorMessage>
</ValidationRule>