force-app/main/default/objects/Objective__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>OID__c</columns>
    <columns>Program__c</columns>
    <columns>SD__c</columns>
    <columns>NAME</columns>
    <columns>SD_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>