force-app/main/default/objects/Objective__c/listViews/Inactive.listView-meta.xml
<ListView>
    <fullName>Inactive</fullName>
    <columns>OBJECT_ID</columns>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Program__c</field>
        <operation>equals</operation>
        <value>Writing</value>
    </filters>
    <filters>
        <field>SD_Name__c</field>
        <operation>equals</operation>
        <value>Write (no visual)</value>
    </filters>
    <label>Inactive</label>
</ListView>