force-app/main/default/objects/Objective__c/listViews/Objectives_with_Statstics.listView-meta.xml
<ListView>
    <fullName>Objectives_with_Statstics</fullName>
    <columns>OID__c</columns>
    <columns>Program__c</columns>
    <columns>SD__c</columns>
    <columns>NAME</columns>
    <columns>SD_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Status__c</columns>
    <columns>Clients__c</columns>
    <columns>Percent_Correct__c</columns>
    <columns>Sessions__c</columns>
    <columns>stats_timestamp__c</columns>
    <columns>Correct__c</columns>
    <columns>Total_Responses__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Clients__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Objectives with Statstics</label>
</ListView>